src/objects/XO_Clinic_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Health_Center_Address__c</fullName>
        <label>Health Center Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Health_Center_Telephone__c</fullName>
        <label>Health Center Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Web_App_URL__c</fullName>
        <label>Web App URL</label>
        <type>Url</type>
    </fields>
    <label>XO Clinic Profile</label>
    <nameField>
        <label>XO Clinic Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XO Clinic Profiles</pluralLabel>
    <recordTypes>
        <fullName>AMAT_Gloucester</fullName>
        <active>true</active>
        <label>AMAT Gloucester</label>
    </recordTypes>
    <recordTypes>
        <fullName>AMAT_Santa_Clara</fullName>
        <active>true</active>
        <label>AMAT Santa Clara</label>
    </recordTypes>
    <recordTypes>
        <fullName>Apple_Austin</fullName>
        <active>true</active>
        <label>Apple Austin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Apple_Cupertino</fullName>
        <active>true</active>
        <label>Apple Cupertino</label>
    </recordTypes>
    <recordTypes>
        <fullName>Facebook_Menlo_Park</fullName>
        <active>true</active>
        <label>Facebook Menlo Park</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>